<resources>
    <string name="app_name">TallerUnimagUno</string>
    <string name="login">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">Registrarse</string>
    <string name="matematicas">MATEMATICAS</string>
    <string name="fisica">FISICA</string>
    <string name="estadistica">ESTADISTICA</string>
    <string name="texto">TEXTO</string>
    <string name="numero_uno">NUMERO UNO</string>
    <string name="numero_dos">NUMERO DOS</string>

    <string name="calcular">CALCULAR</string>
    <string name="borrardato">BORRAR DATO</string>
    <string name="suma">SUMA</string>
    <string name="multiplicacion">MULTIPLICACIÓN</string>
    <string name="potencia">POTENCIA</string>
    <string name="olvidarcontraseña">Olvidar Contraseña</string>
    <string name="recordardatos">Recordar Mis Datos</string>
    <string name="terminosycondiciones">Aceptar Terminos Y Condiciones </string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="newpassword">Contraseña</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="guardarRegistro">GUARDAR</string>
    <string name="correorecup">Correo</string>
    <string name="enviarcodigo">ENVIAR CODIGO</string>
    <string name="validar">VALIDAR</string>
    <string name="nuevacontraseña">Nueva Contraseña</string>
    <string name="repetircontraseña">Repetir Contraseña</string>
    <string name="restablecer">Restablecer</string>
    <string name="volver">VOLVER</string>
    <string name="cerrarsesion">Cerrar Sesion</string>
    <string name="ayuda">AYUDA</string>
    <string name="velocidad">VELOCIDAD</string>
    <string name="fuerza">FUERZA</string>
    <string name="voltaje">VOLTAJE</string>
    <string name="calculovelocidad">CALCULO VELOCIDAD</string>
    <string name="distancia">Distancia  (m)</string>
    <string name="tiempo">Tiempo (s)</string>
    <string name="resultado">Resultado (m/s)</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="masa">Masa (Kg)</string>
    <string name="calculofuerza">CALCULO FUERZA</string>
    <string name="aceleracion">Aceleracion (m/s**2)</string>
    <string name="resultadof">Resultado (N)</string>
    <string name="calcularvoltaje">CALCULAR VOLTAJE</string>
    <string name="corriente">Corriente (A)</string>
    <string name="resistencias"> Num Resistencias:</string>
    <string name="resultadovolt">Resultado(V)</string>
    <string name="dosr">2 Resistencias</string>
    <string name="tresr">3 Resistencias</string>
    <string name="paralelo">Circuito Paralelo</string>
    <string name="valorresistencia">Valor Resistencia (ohm)</string>
    <string name="Selecciona"> Seleccione </string>
    <string name="escribatexto">Escriba Un Texto</string>
    <string name="negrita">Negrita</string>
    <string name="italica">Italica</string>
    <string name="subrayada"><u>Subrayada</u></string>
    <string name="convertir">CONVERTIR</string>
    <string name="convertirtexto">CONVERTIR TEXTO</string>
    <string name="punto1">Punto 1</string>
    <string name="punto2">Punto 2</string>
    <string name="digitevalorx">Digite Valor (X)</string>
    <string name="digitevalory">Digite Valor (Y)</string>
    <string name="quedeseacalcular">¿Que Desea Calcular?</string>
    <string name="pendiente">Pendiente</string>
    <string name="cuadrante">Cuadrante</string>
    <string name="Resultado">Resultado</string>
    <string name="volverallogin">Volver Al Login</string>
    <string name="registroexitoso">¡Registro Exitoso!</string>

</resources>