<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".VoltajeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/calcularvoltaje"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/corriente"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtcorriente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/resistencias"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinresistencias"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:entries="@array/resistencias"
            android:paddingTop="0dp"
            android:scrollbarSize="4dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtres1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/valorresistencia"
            android:inputType="number|numberDecimal"
            android:textSize="18sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edtres2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/valorresistencia"
            android:inputType="number|numberDecimal"
            android:textSize="18sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edtres3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/valorresistencia"
            android:inputType="number|numberDecimal"
            android:textSize="18sp"
            android:visibility="invisible" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkparalelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/paralelo" />

    <TextView
        android:id="@+id/textvResvol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.3"
        android:gravity="center"
        android:hint="@string/resultadovolt"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncalcvol"
            android:layout_width="20dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnlimpiarvol"
            android:layout_width="20dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/limpiar" />

    </LinearLayout>


</LinearLayout>